--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,16 @@ body {
 h1, h2 {
     font-family: var(--fonte-principal);
     font-size: 1.5rem;
+    padding-bottom: 20px;
 }
+
+img {
+    padding: 10px;
+}
+
+li {
+    list-style: inside;
+}	
 
 .container {
     display: flex;
