--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,17 @@ strong {
 #plano-acao-content {
   margin-bottom: 12px;
 }
+
+.align-center {
+  display: flex;
+}
+
+#kaushan {
+  font-family: var(--fonte-principal);
+}
+
+.column {
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 8px;
+}
